--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "nodemon": "^2.0.20"
   },
   "dependencies": {
+    "babel-preset-react": "^6.24.1",
     "cors": "^2.8.5",
     "express": "^4.18.2",
     "mongoose": "^6.6.5"
