--- a/package.json
+++ b/package.json
@@ -25,12 +25,14 @@
   "type": "module",
   "devDependencies": {
     "dotenv": "^16.0.3",
-    "nodemon": "^2.0.20"
+    "nodemon": "^2.0.20",
+    "prettier": "^2.7.1"
   },
   "dependencies": {
     "babel-preset-react": "^6.24.1",
     "cors": "^2.8.5",
     "express": "^4.18.2",
-    "mongoose": "^6.6.5"
+    "mongoose": "^6.6.5",
+    "seedrandom": "^3.0.5"
   }
 }
