[endgame modal] html and css

--- a/app/package.json
+++ b/app/package.json
@@ -16,7 +16,9 @@
     "react-dom": "^18.2.0",
     "react-icons": "^4.6.0",
     "react-router-dom": "^6.4.2",
-    "sort-by": "^0.0.2"
+    "react-spring": "^9.0.0-rc.3",
+    "sort-by": "^0.0.2",
+    "styled-components": "^5.3.6"
   },
   "devDependencies": {
     "@types/react": "^18.0.17",
